# sherlock_gnomes

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.codex/: AGENTS.md
.codex/prompts/: bugfix.md  code-review.md  feature-implementation.md  ops-smoke-check.md
.codex/skills/sherlock-compose-ops/: SKILL.md
.codex/skills/sherlock-full-stack-change/: SKILL.md
.codex/skills/sherlock-nextjs-frontend/: SKILL.md
.codex/skills/sherlock-rust-backend/: SKILL.md
.codex/skills/sherlock-test-driven-development/: SKILL.md
.github/workflows/: audit.yml  fuzz.yml  hardening-nightly.yml  lint.yml  tests.yml
backend/: Cargo.toml  Dockerfile
backend/fuzz/: .gitignore  Cargo.toml  README.md
backend/fuzz/corpus/parse_semantic_blocks/: seed
backend/fuzz/fuzz_targets/: parse_semantic_blocks.rs
backend/migrations/: 202602260001_semantic_indexing.sql  202603120001_git_repository_storage.sql
backend/src/: lib.rs  main.rs
backend/src/indexing/: chunking.rs  embeddings.rs  mod.rs
backend/tests/: api.rs  migrations.rs  perf_smoke.rs
frontend/: Dockerfile  eslint.config.mjs  middleware.test.ts  middleware.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  homepage.test.tsx  layout.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/explorer/: page.tsx
frontend/app/health/: route.ts
frontend/app/login/: page.test.tsx  page.tsx
frontend/app/profile/: page.test.tsx  (+1 more)
frontend/components/: code-view.test.tsx  code-view.tsx  explorer.test.tsx  explorer.tsx  top-nav.test.tsx  top-nav.tsx
frontend/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  backend-proxy.ts  csrf.ts  profile-admin.test.ts  profile-admin.ts  rate-limit.test.ts  rate-limit.ts  request-client-id.ts  session.test.ts  session.ts  syntax-highlight.ts
frontend/test/: setup.ts
scripts/: run-integration-tests.sh  test-all.sh
scripts/integration/: lib.sh  test-backend-core.sh  test-frontend-smoke.sh  test-index-search.sh
(+34 files in other folders)
