[package]
name = "codebase-explorer-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
ignore = "0.4.25"
pgvector = { version = "0.4.1", features = ["sqlx"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
libfuzzer-sys = "0.4.12"

[dev-dependencies]
http-body-util = "0.1.3"
proptest = "1.9.0"
serial_test = "3.2.0"
tempfile = "3.26.0"
tower = { version = "0.5.3", features = ["util"] }
